; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_bookmark.c_SaveBookmarkTable.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_bookmark.c_SaveBookmarkTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@gNumBookmarks = common dso_local global i32 0, align 4
@gBookmarkTable = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SaveBookmarkTable() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = load i32, i32* @gNumBookmarks, align 4
  %6 = icmp slt i32 %5, 1
  br i1 %6, label %10, label %7

7:                                                ; preds = %0
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** @gBookmarkTable, align 8
  %9 = icmp eq %struct.TYPE_3__* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %7, %0
  store i32 0, i32* %1, align 4
  br label %73

11:                                               ; preds = %7
  store i32 0, i32* %2, align 4
  store i32 0, i32* %4, align 4
  br label %12

12:                                               ; preds = %28, %11
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* @gNumBookmarks, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %31

16:                                               ; preds = %12
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** @gBookmarkTable, align 8
  %18 = load i32, i32* %2, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %16
  %25 = load i32, i32* %4, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %24, %16
  br label %28

28:                                               ; preds = %27
  %29 = load i32, i32* %2, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %2, align 4
  br label %12

31:                                               ; preds = %12
  %32 = load i32, i32* %4, align 4
  %33 = call i32* @OpenTmpBookmarkFile(i32 %32)
  store i32* %33, i32** %3, align 8
  %34 = load i32*, i32** %3, align 8
  %35 = icmp eq i32* %34, null
  br i1 %35, label %36, label %37

36:                                               ; preds = %31
  store i32 -1, i32* %1, align 4
  br label %73

37:                                               ; preds = %31
  store i32 0, i32* %2, align 4
  br label %38

38:                                               ; preds = %63, %37
  %39 = load i32, i32* %2, align 4
  %40 = load i32, i32* @gNumBookmarks, align 4
  %41 = icmp slt i32 %39, %40
  br i1 %41, label %42, label %66

42:                                               ; preds = %38
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** @gBookmarkTable, align 8
  %44 = load i32, i32* %2, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i64 %45
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = icmp eq i64 %48, 0
  br i1 %49, label %50, label %62

50:                                               ; preds = %42
  %51 = load %struct.TYPE_3__*, %struct.TYPE_3__** @gBookmarkTable, align 8
  %52 = load i32, i32* %2, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i64 %53
  %55 = load i32*, i32** %3, align 8
  %56 = call i64 @WriteBmLine(%struct.TYPE_3__* %54, i32* %55, i32 1)
  %57 = icmp slt i64 %56, 0
  br i1 %57, label %58, label %61

58:                                               ; preds = %50
  %59 = load i32*, i32** %3, align 8
  %60 = call i32 @CloseBookmarkFile(i32* %59)
  store i32 -1, i32* %1, align 4
  br label %73

61:                                               ; preds = %50
  br label %62

62:                                               ; preds = %61, %42
  br label %63

63:                                               ; preds = %62
  %64 = load i32, i32* %2, align 4
  %65 = add nsw i32 %64, 1
  store i32 %65, i32* %2, align 4
  br label %38

66:                                               ; preds = %38
  %67 = load i32*, i32** %3, align 8
  %68 = call i32 @CloseBookmarkFile(i32* %67)
  %69 = call i64 (...) @SwapBookmarkFiles()
  %70 = icmp slt i64 %69, 0
  br i1 %70, label %71, label %72

71:                                               ; preds = %66
  store i32 -1, i32* %1, align 4
  br label %73

72:                                               ; preds = %66
  store i32 0, i32* %1, align 4
  br label %73

73:                                               ; preds = %72, %71, %58, %36, %10
  %74 = load i32, i32* %1, align 4
  ret i32 %74
}

declare dso_local i32* @OpenTmpBookmarkFile(i32) #1

declare dso_local i64 @WriteBmLine(%struct.TYPE_3__*, i32*, i32) #1

declare dso_local i32 @CloseBookmarkFile(i32*) #1

declare dso_local i64 @SwapBookmarkFiles(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
